Quick fix to the categories page items overlapping the title and header on certain screen resolutions

--- a/styles/categories.css
+++ b/styles/categories.css
@@ -76,10 +76,6 @@
 
 .button-container-food-options {
     margin: auto;
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
     text-align: center;
     width: 100%;
 }
